we decided to release the first version of Sulaiman without an extensions manager system, so, we removed all the work we already did on it and we'll rework it from scratch into the next version

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "homepage": "https://gitlab.com/herpproject/Sulaiman#readme",
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/herpproject/Sulaiman.git"
+    "url": "git+ssh://git@gitlab.com/herpproject/Sulaiman.git"
   },
   "bugs": {
     "url": "https://gitlab.com/herpproject/Sulaiman/issues"
